# winusb-switcher-tauri-lite1

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY.md  eslint.config.mjs  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  README_JLINK_RUNTIME_LAYOUT.md  build.rs  tauri.conf.ci-prefrontend.json  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/native/: JLinkARMDLL.h  JLinkARMDLL_Wrapper.cpp  JLinkARMDLL_Wrapper.h  Pal.cpp  Pal.h  bridge_state.cpp  bridge_state.h  bridge_support.cpp  bridge_support.h  bridge_util.cpp  bridge_util.h  commander_exec.cpp  commander_exec.h  jlink_bridge.cpp  jlink_bridge.h  jlink_bridge_api.cpp  runtime_dirs.cpp  runtime_dirs.h
src-tauri/native/common/: Pal.cpp  bridge_util.cpp  bridge_util.h  runtime_dirs.cpp  runtime_dirs.h
src-tauri/native/jlink/: JLINKARM_Const.h  JLinkARMDLL_Wrapper.cpp  JLinkARMDLL_Wrapper.h  bridge_state.cpp  bridge_state.h  commander_exec.cpp  commander_exec.h  jlink_bridge.h  jlink_bridge_api.cpp
src-tauri/resources/: _bundle_manifest.txt
src-tauri/resources/jlink-runtime-bundled/: .tauri-bundle-glob-anchor
src-tauri/src/: bundled_jlink.rs  commands.rs  error.rs  jlink_ffi.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: lite.rs  mod.rs  probe.rs
src-tauri/src/domain/: mod.rs  probe_backend.rs  probe_facade.rs  probe_handle.rs
src-tauri/src/domain/jlink/: mod.rs  service.rs  types.rs
src-tauri/src/infra/: mod.rs
src-tauri/src/platform/: mod.rs
(+30 files in other folders)
